# mirea-max-bot-workshop

./: .env.example  01_users.md  02_channels.md  03_chats.md  04_bots.md  05_miniapps.md  README.md  pyproject.toml
content/: max.html  tg.html
workshop/: runner.py
workshop/max/: __main__.py  attachments.py  callback.py  main.py  message.py  start.py
workshop/tg/: __main__.py  attachments.py  callback.py  message.py  start.py
